LIBDRUM-872. Back-port DSpace 8.0 fix for admin sidebar text cutoff
The following is an adaption of the DSpace 8.0 fix in the following
pull requests for use in DSpace 7.6.2:

* `https://github.com/DSpace/dspace-angular/pull/2976`
* `https://github.com/DSpace/dspace-angular/pull/3004`

The basic change is the same (detecting the browser and applying a
particular CSS change for Firefox), but the files that are modified
are different, due to changes in DSpace 8.0.

https://umd-dit.atlassian.net/browse/LIBDRUM-872

--- a/src/app/admin/admin-sidebar/admin-sidebar.component.scss
+++ b/src/app/admin/admin-sidebar/admin-sidebar.component.scss
@@ -137,4 +137,19 @@
       }
     }
   }
+
+  // UMD Customization
+  // Adaption of DSpace 8.0 fix from https://github.com/DSpace/dspace-angular/pull/2976
+  // This customization should be removed when upgrading to DSpace 8.0 or later
+  ::ng-deep {
+    // The "browser-firefox" setting was not included in the DSpace 8.0 pull
+    // request, but appears to be necessary for MacOS.
+    .browser-firefox {
+      --ds-dark-scrollbar-width: 20px;
+    }
+    .browser-firefox-windows {
+      --ds-dark-scrollbar-width: 20px;
+    }
+  }
+  // End UMD Customization
 }
